--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -22,7 +22,7 @@ services:
   repo:
     service_id: hostedgit
     parameters:
-      test4: if($env.foo == "foo"){ function g{ $env.foo; }; g; } else { $env.bar; }
+      test4: if($env.foo == "foo"){ function g(){ $env.foo; }; g(); } else { $env.bar; }
 
 form:
   pipeline:
