--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -22,7 +22,7 @@ services:
   repo:
     service_id: hostedgit
     parameters:
-      test4: if($env.foo == "foo"){ var x = new Function('a', 'b', 'return a + b;'); x; } else { $env.bar; }
+      test4: if($env.foo === "foo"){ typeof $env.foo; } else { $env.bar; }
 
 form:
   pipeline:
