--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -24,7 +24,7 @@ services:
     parameters:
       test4: >
         if($env.foo === "foo"){
-          $env.createObject("hello world");
+          $env.____$____.____$$yml$$____.services.repo.service_id;
         } else { $env.bar; }
 
 form:
