--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -23,7 +23,12 @@ services:
     service_id: hostedgit
     parameters:
       test4: >
-        $env.services.repo.service_id ? $env.services.repo.service_id : "don't have it!"
+        $env.services.build.service_id ? $env.services.build.service_id : "don't have it!"
+
+  build:
+    service_id: pipeline
+    parameters:
+      test5: "hello world"
 
 form:
   pipeline:
