--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -23,7 +23,13 @@ services:
     service_id: hostedgit
     parameters:
       test4: >
-        $env.services.build.service_id ? $env.services.build.service_id : "don't have it!"
+        $env.services.build.service_id ?
+          $env.services.build.service_id :
+            "don't have it!"
+      test5: >
+        $env.____$____.____$$yml$$____.services.build.service_id ?
+          $env.____$____.____$$yml$$____.services.build.service_id :
+            "don't have it!"
 
   build:
     service_id: pipeline
