--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -14,10 +14,10 @@ services:
   repo:
     $switch:
       - $expr: $env.case
-      - $default: "a"
-      - $case: "a"
-      - $case: "b"
-      - $case: "undefined"
+      - $default: 1
+      - $case: 2
+      - $case: 3
+      - $case: undefined
 
 form:
   pipeline:
