--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -22,22 +22,22 @@ services:
   repo:
     service_id: hostedgit
     parameters:
-      test1: $env.services.repo.service_id
+      #test1: $env.services.repo.service_id
       test2: $env.services.build.parameters.test5
-      test3: $env.form.pipeline.parameters.user
-      test4: $env.toolchain.name
-      test5: $env.template.name
-      test6: $env.version
+      #test3: $env.form.pipeline.parameters.user
+      #test4: $env.toolchain.name
+      #test5: $env.template.name
+      #test6: $env.version
 
-      test7: "{{services.repo.service_id}}"
-      test8: "{{services.build.parameters.test5}}"
-      test9: "{{form.pipeline.parameters.user}}"
-      test10: "{{toolchain.name}}"
-      test11: "{{template.name}}"
-      test12: "{{version}}"
+      #test7: "{{services.repo.service_id}}"
+      #test8: "{{services.build.parameters.test5}}"
+      #test9: "{{form.pipeline.parameters.user}}"
+      #test10: "{{toolchain.name}}"
+      #test11: "{{template.name}}"
+      #test12: "{{version}}"
 
-      test13: "{{foo}}"
-      test14: "{{foo.bar}}"
+      #test13: "{{foo}}"
+      #test14: "{{foo.bar}}"
 
   build:
     service_id: pipeline
