--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -22,23 +22,23 @@ services:
   repo:
     service_id: hostedgit
     parameters:
-      env1: $env.services.repo.service_id
-      env2: $env.services.build.parameters.test5
-      env3: $env.form.pipeline.parameters.user
-      env4: $env.toolchain.name
-      env5: $env.template.name
-      env6: $env.version
-      env7: $env.foo
-      env8: $env.foo.bar
-      #env9: $env.services.repo
-      must1: "{{services.repo.service_id}}"
-      must2: "{{services.build.parameters.test5}}"
-      must3: "{{form.pipeline.parameters.user}}"
-      must4: "{{toolchain.name}}"
-      must5: "{{template.name}}"
-      must6: "{{version}}"
-      must7: "{{foo}}"
-      must8: "{{foo.bar}}"
+      #env1: $env.services.repo.service_id
+      #env2: $env.services.build.parameters.test5
+      #env3: $env.form.pipeline.parameters.user
+      #env4: $env.toolchain.name
+      #env5: $env.template.name
+      #env6: $env.version
+      #env7: $env.foo
+      #env8: $env.foo.bar
+      env9: $env.services
+      #must1: "{{services.repo.service_id}}"
+      #must2: "{{services.build.parameters.test5}}"
+      #must3: "{{form.pipeline.parameters.user}}"
+      #must4: "{{toolchain.name}}"
+      #must5: "{{template.name}}"
+      #must6: "{{version}}"
+      #must7: "{{foo}}"
+      #must8: "{{foo.bar}}"
       #must9: "{{services.repo}}"
 
   build:
