--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,7 +30,7 @@ services:
       #env6: $env.version
       #env7: $env.foo
       #env8: $env.foo.bar
-      env9: $env.services
+      env9: $env.version
       #must1: "{{services.repo.service_id}}"
       #must2: "{{services.build.parameters.test5}}"
       #must3: "{{form.pipeline.parameters.user}}"
