--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,7 +30,7 @@ services:
       #env6: $env.version
       #env7: $env.foo
       #env8: $env.foo.bar
-      env9: $env.version
+      #env9: $env.services
       #must1: "{{services.repo.service_id}}"
       #must2: "{{services.build.parameters.test5}}"
       #must3: "{{form.pipeline.parameters.user}}"
@@ -39,7 +39,7 @@ services:
       #must6: "{{version}}"
       #must7: "{{foo}}"
       #must8: "{{foo.bar}}"
-      #must9: "{{services.repo}}"
+      must9: "{{services}}"
 
   build:
     service_id: pipeline
