--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -25,12 +25,12 @@ services:
       #env1: $env.services.repo.service_id
       #env2: $env.services.build.parameters.test5
       #env3: $env.form.pipeline.parameters.user
-      env4: $env.toolchain.name
+      #env4: $env.toolchain.name
       #env5: $env.template.name
       #env6: $env.version
       #env7: $env.foo
       #env8: $env.foo.bar
-      #env9: $env.services.repo
+      env9: $env.services.repo
       #must1: "{{services.repo.service_id}}"
       #must2: "{{services.build.parameters.test5}}"
       #must3: "{{form.pipeline.parameters.user}}"
