--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -31,6 +31,7 @@ services:
       #env7: $env.foo
       #env8: $env.foo.bar
       env9: $env.services.repo
+      env10: $env.services.build
       #must1: "{{services.repo.service_id}}"
       #must2: "{{services.build.parameters.test5}}"
       #must3: "{{form.pipeline.parameters.user}}"
