--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -22,25 +22,28 @@ services:
   repo:
     service_id: hostedgit
     parameters:
-      #env1: $env.services.repo.service_id
-      #env2: $env.services.build.parameters.test5
-      #env3: $env.form.pipeline.parameters.user
-      #env4: $env.toolchain.name
-      #env5: $env.template.name
-      #env6: $env.version
-      #env7: $env.foo
-      #env8: $env.foo.bar
-      env9: $env.services.repo
-      env10: $env.services.repo.parameters
-      #must1: "{{services.repo.service_id}}"
-      #must2: "{{services.build.parameters.test5}}"
-      #must3: "{{form.pipeline.parameters.user}}"
-      #must4: "{{toolchain.name}}"
-      #must5: "{{template.name}}"
-      #must6: "{{version}}"
-      #must7: "{{foo}}"
-      #must8: "{{foo.bar}}"
-      #must9: "{{services.build}}"
+      env1: $env.services.repo.service_id
+      env2: $env.services.build.parameters.test5
+      env3: $env.form.pipeline.parameters.user
+      env4: $env.toolchain.name
+      env5: $env.template.name
+      env6: $env.version
+      env7: $env.foo
+      env8: $env.foo.bar
+      env9: $env.services
+      env10: $env.services.repo
+      env11: $env.services.repo.parameters
+      must1: "{{services.repo.service_id}}"
+      must2: "{{services.build.parameters.test5}}"
+      must3: "{{form.pipeline.parameters.user}}"
+      must4: "{{toolchain.name}}"
+      must5: "{{template.name}}"
+      must6: "{{version}}"
+      must7: "{{foo}}"
+      must8: "{{foo.bar}}"
+      must9: "{{services}}"
+      must10: "{{services.repo}}"
+      must11: "{{services.repo.parameters}}"
 
   build:
     service_id: pipeline
