--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -41,9 +41,9 @@ services:
       must6: "{{version}}"
       must7: "{{foo}}"
       must8: "{{foo.bar}}"
-      must9: "{{services}}"
-      must10: "{{services.repo}}"
-      must11: "{{services.repo.parameters}}"
+      #must9: "{{services}}"
+      #must10: "{{services.repo}}"
+      #must11: "{{services.repo.parameters}}"
 
   build:
     service_id: pipeline
