--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -33,6 +33,7 @@ services:
       #env9: $env.services
       env10: $env.services.repo
       env11: $env.services.repo.parameters
+      env12: $env.form
       must1: "{{services.repo.service_id}}"
       must2: "{{services.build.parameters.test5}}"
       must3: "{{form.pipeline.parameters.user}}"
@@ -41,9 +42,10 @@ services:
       must6: "{{version}}"
       must7: "{{foo}}"
       must8: "{{foo.bar}}"
-      must9: "{{services}}"
+      #must9: "{{services}}"
       must10: "{{services.repo}}"
       must11: "{{services.repo.parameters}}"
+      must12: "{{form}}"
 
   build:
     service_id: pipeline
