--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -43,8 +43,8 @@ services:
       must7: "{{foo}}"
       must8: "{{foo.bar}}"
       #must9: "{{services}}"
-      must10: "{{services.repo}}"
-      must11: "{{services.repo.parameters}}"
+      #must10: "{{services.repo}}"
+      #must11: "{{services.repo.parameters}}"
       #must12: "{{form}}"
 
   build:
