--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,10 +30,10 @@ services:
       env6: $env.version
       env7: $env.foo
       env8: $env.foo.bar
-      #env9: $env.services
+      env9: $env.services
       env10: $env.services.repo
       env11: $env.services.repo.parameters
-      #env12: $env.form
+      env12: $env.form
       must1: "{{services.repo.service_id}}"
       must2: "{{services.build.parameters.test5}}"
       must3: "{{form.pipeline.parameters.user}}"
