--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -1,22 +1,22 @@
 version: '2'
 
 template:
-  name: "DYML: Simple"
-  description: "DYML: Simple"
+  name: "DYML: Template Path Context"
+  description: "DYML: Template Path Context"
   required:
     - repo
 
-#  info:
- #   git url: >
-  #    "[" + $env.repository + "]" +
-   #     "(" + $env.repository + ")"
-#    git branch: >
- #     "[" + $env.branch + "]" +
-  #      "(" + $env.repository +
-   #       "/tree/" + $env.branch + ")"
+  info:
+    git url: >
+      "[" + $env.repository + "]" +
+        "(" + $env.repository + ")"
+    git branch: >
+      "[" + $env.branch + "]" +
+        "(" + $env.repository +
+          "/tree/" + $env.branch + ")"
 
 toolchain:
-  name: 'DYML: Simple'
+  name: 'DYML: Template Path Context'
 
 services:
   repo:
