--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -1,51 +1,42 @@
 version: '2'
 
 template:
-  name: "DYML: Template Path Context"
-  description: "DYML: Template Path Context"
+  name: "DYML - Template Path Context"
+  description: "DYML - Template Path Context"
   required:
     - repo
 
-  info:
-    git url: >
-      "[" + $env.repository + "]" +
-        "(" + $env.repository + ")"
-    git branch: >
-      "[" + $env.branch + "]" +
-        "(" + $env.repository +
-          "/tree/" + $env.branch + ")"
-
 toolchain:
-  name: 'DYML: Template Path Context'
+  name: 'DYML - Template Path Context'
 
 services:
   repo:
     service_id: hostedgit
     parameters:
-      env1: $env.services.repo.service_id
-      env2: $env.services.build.parameters.test5
-      env3: $env.form.pipeline.parameters.user
-      env4: $env.toolchain.name
-      env5: $env.template.name
-      env6: $env.version
-      env7: $env.foo
-      env8: $env.foo.bar
+      #env1: $env.services.repo.service_id
+      #env2: $env.services.build.parameters.test5
+      #env3: $env.form.pipeline.parameters.user
+      #env4: $env.toolchain.name
+      #env5: $env.template.name
+      #env6: $env.version
+      #env7: $env.foo
+      #env8: $env.foo.bar
       env9: $env.services
-      env10: $env.services.repo
-      env11: $env.services.repo.parameters
-      env12: $env.form
-      must1: "{{services.repo.service_id}}"
-      must2: "{{services.build.parameters.test5}}"
-      must3: "{{form.pipeline.parameters.user}}"
-      must4: "{{toolchain.name}}"
-      must5: "{{template.name}}"
-      must6: "{{version}}"
-      must7: "{{foo}}"
-      must8: "{{foo.bar}}"
+      #env10: $env.services.repo
+      #env11: $env.services.repo.parameters
+      #env12: $env.form
+      #must1: "{{services.repo.service_id}}"
+      #must2: "{{services.build.parameters.test5}}"
+      #must3: "{{form.pipeline.parameters.user}}"
+      #must4: "{{toolchain.name}}"
+      #must5: "{{template.name}}"
+      #must6: "{{version}}"
+      #must7: "{{foo}}"
+      #must8: "{{foo.bar}}"
       #must9: "{{services}}"
       #must10: "{{services.repo}}"
       #must11: "{{services.repo.parameters}}"
-      must12: "{{form}}"
+      #must12: "{{form}}"
 
   build:
     service_id: pipeline
