--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -21,7 +21,7 @@ services:
       #env6: $env.version
       #env7: $env.foo
       #env8: $env.foo.bar
-      env9: $env.services
+      #env9: $env.services
       #env10: $env.services.repo
       #env11: $env.services.repo.parameters
       #env12: $env.form
