--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -23,6 +23,8 @@ services:
       env8: $env.foo.bar
       env9: $env.services.repo
       env10: $env.services.repo.parameters
+      env11: $env.services
+      env12: $env.form
       must1: "{{services.repo.service_id}}"
       must2: "{{services.build.parameters.test5}}"
       must3: "{{form.pipeline.parameters.user}}"
