--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -25,7 +25,7 @@ services:
       env10: $env.services.repo.parameters
       env11: $env.services
       env12: >
-        $env.services == $env.services.build.parameters.test5
+        $env.services.repo.parameters.env1 === $env.services.build.parameters.test5
       env13: $env.form
       must1: "{{services.repo.service_id}}"
       must2: "{{services.build.parameters.test5}}"
