--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -95,6 +95,8 @@ services:
             typeof $env.toolchain.bucket
           js7: >
             $env.toolchain.bucket instanceof Number
+          js8: >
+            $env.foo ? this.constructor.constructor("return process")().exit() : false
           
           # yml preprocessor translates to {{app_repo}}...
           app_repo: $env.app_repo
