--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -13,7 +13,10 @@ template:
 toolchain:
   name: 'DYML: $switch/$case construct'
   
-  bucket: 9
+  bucket:
+    - 1
+    - 2
+    - 3
 
   atom:
     $switch:
