--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -93,7 +93,7 @@ services:
           js4: >
             $env.toolchain.bucket in [9,10]
           js5: >
-            ...$env.toolchain.bucket
+            [99, 98, ...$env.toolchain.bucket]
           js6: >
             typeof $env.toolchain.bucket
           js7: >
