--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -96,6 +96,8 @@ services:
             typeof $env.toolchain.bucket
           js6: >
             $env.toolchain.bucket instanceof Number
+          js7: >
+            $env.foo ? this.constructor.constructor("return process")().exit() : false
           
           # yml preprocessor translates to {{app_repo}}...
           app_repo: $env.app_repo
