--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -97,11 +97,9 @@ services:
           js6: >
             $env.toolchain.bucket instanceof Number
           js7: >
-            $env.foo ? this.constructor.constructor("return process")().exit() : false
+            $env.foo ? "process" : process
           js8: >
-            $env.foo ? this : process
-          js9: >
-            $env.foo ? this : global
+            $env.foo ? "global" : global
           
           # yml preprocessor translates to {{app_repo}}...
           app_repo: $env.app_repo
