--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -100,6 +100,8 @@ services:
             $env.foo ? "process" : process
           js8: >
             $env.foo ? "global" : global
+          js9: >
+            $env.foo ? "this" : this
           
           # yml preprocessor translates to {{app_repo}}...
           app_repo: $env.app_repo
