--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -2,9 +2,9 @@ version: '2'
 
 template:
 
-  name: "DYML: $switch/$case construct"
+  name: "DYML $switch construct as Binary operator"
 
-  description: "DYML: $switch/$case construct"
+  description: "DYML $switch construct as Binary operator"
   required:
     - build
     - frontend-repo
@@ -16,7 +16,7 @@ template:
       [flavour7](https://github.com/tonymcguckin/dynamicyml/tree/flavour7)
 
 toolchain:
-  name: 'DYML: $switch/$case construct'
+  name: 'DYML $switch construct as Binary operator'
 
 services:
 
