--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -1,22 +1,20 @@
-#---
 version: '2'
 
 template:
-  name: "DYML: $switch/$case construct"
-  description: "DYML: $switch/$case construct"
+  name: "DYML - env script encoding/escaping"
+  description: "DYML - env script encoding/escaping"
   required:
     - build
     - frontend-repo
     - sample-repo
-
-  # [ type: complex/inline ] -> evaluated in the $env js engine
-  #
   info:
-    git url: "'[' + $env.repository + '](' + $env.repository + ')'"
-    git branch: "'[' + $env.branch + ']('+ $env.repository + '/tree/' + $env.branch + ')'"
+    git url: >
+      '[' + $env.repository + '](' + $env.repository + ')'
+    git branch: >
+      '[' + $env.branch + ']('+ $env.repository + '/tree/' + $env.branch + ')'
       
 toolchain:
-  name: 'DYML: $switch/$case construct'
+  name: 'DYML - env script encoding/escaping'
 
 services:
 
