--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -1,21 +1,25 @@
 version: '2'
 
 template:
-  name: "DYML - Template Path Context"
-  description: "DYML - Template Path Context"
+  name: "DYML - $env Template Path & Query Context"
+  description: "DYML - $env Template Path & Query Context"
   required:
     - repo
   info:
-    git url: "'[' + $env.repository + '](' + $env.repository + ')'"
-    git branch: "'[' + $env.branch + ']('+ $env.repository + '/tree/' + $env.branch + ')'"
+    git url: >
+      '[' + $env.repository + '](' + $env.repository + ')'
+    git branch: >
+      '[' + $env.branch + ']('+ $env.repository + '/tree/' + $env.branch + ')'
 
 toolchain:
-  name: 'DYML - Template Path Context'
+  name: 'DYML - $env Template Path & Query Context'
 
 services:
   repo:
     service_id: hostedgit
     parameters:
+
+      # $env params...
       env1: $env.services.repo.service_id
       env2: $env.services.build.parameters.test5
       env3: $env.form.pipeline.parameters.user
@@ -27,9 +31,11 @@ services:
       env9: $env.services.repo
       env10: $env.services.repo.parameters
       env11: $env.services
-      env12: >
+      env12: $env.form
+      env13: >
         $env.services.repo.parameters.env1 === $env.services.build.parameters.test5
-      env13: $env.form
+
+      # mustache params...
       must1: "{{services.repo.service_id}}"
       must2: "{{services.build.parameters.test5}}"
       must3: "{{form.pipeline.parameters.user}}"
